unet_lstm_v2, dataset refractoring

--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -71,18 +71,19 @@
     "        for seq_id, seq in enumerate(self.sequences[index * self.batch_size: (index + 1) * self.batch_size]):\n",
     "            for timestamp_id, timestamp in enumerate(seq):\n",
     "                with h5py.File(self.timestamp_to_file[timestamp]) as d:\n",
-    "                    intensity[seq_id][timestamp_id] = np.pad(np.expand_dims(d[timestamp][\"intensity\"][:], axis=-1), ((2, 2), (2, 2), (0, 0)), 'constant')\n",
-    "                    radial_velocity[seq_id][timestamp_id] = np.pad(d[timestamp][\"radial_velocity\"][:].reshape((252, 252, 10)), ((2, 2), (2, 2), (0, 0)), 'constant')\n",
+    "                    intensity[seq_id][timestamp_id] = np.pad(np.expand_dims(d[timestamp][\"intensity\"][:], axis=-1), ((2, 2), (2, 2), (0, 0)), 'constant', constant_values=[-2e6])\n",
+    "                    radial_velocity[seq_id][timestamp_id] = np.pad(d[timestamp][\"radial_velocity\"][:].reshape((252, 252, 10)), ((2, 2), (2, 2), (0, 0)), 'constant', constant_values=[-2e6])\n",
     "\n",
-    "        intensity[intensity == -1e6] = 0\n",
+    "        intensity[intensity == -1e6] = -1\n",
+    "\n",
+    "        targets = np.copy(intensity[:, self.in_seq_len:])\n",
+    "\n",
     "        intensity[intensity == -2e6] = 0\n",
     "\n",
     "        radial_velocity[radial_velocity == -1e6] = 0\n",
     "        radial_velocity[radial_velocity == -2e6] = 0\n",
     "\n",
-    "        targets = intensity[:, self.in_seq_len:]\n",
-    "\n",
-    "        d = np.append(intensity, radial_velocity, axis=-1)\n",
+    "        d = np.append(intensity / 30, (radial_velocity + 34) / 70, axis=-1)\n",
     "        inputs = d[:, :self.in_seq_len]\n",
     "\n",
     "        if self.with_time:\n",
@@ -144,26 +145,26 @@
     "RMSE = make_RMSE_metric()\n",
     "\n",
     "# Data Generator\n",
-    "train_gen = RadarDataset(TRAIN_FILES_LIST, in_seq_len=4, out_seq_len=12, batch_size=8)\n",
-    "val_gen = RadarDataset([TEST_FILE], in_seq_len=4, out_seq_len=12, batch_size=8)\n",
+    "train_gen = RadarDataset([TRAIN_FILES_LIST[0]], in_seq_len=4, out_seq_len=12, batch_size=1)\n",
+    "val_gen = RadarDataset([TEST_FILE], in_seq_len=4, out_seq_len=12, batch_size=1)\n",
     "\n",
     "# Model Callbacks\n",
     "model_checkpoint = ModelCheckpoint(\n",
     "    save_best_only=True,\n",
     "    save_weights_only=True,\n",
-    "    monitor='val_loss',\n",
+    "    monitor='RMSE_metric',\n",
     "    mode='min',\n",
-    "    filepath=os.path.join(RESULT_DIR, 'saved_weights/{val_loss:.4f}-weights.hdf5')\n",
+    "    filepath=os.path.join(RESULT_DIR, 'saved_weights/{epoch}-weights.hdf5')\n",
     ")\n",
     "\n",
     "# Model\n",
-    "from model import make_ConvLSTM\n",
-    "conv_LSTM = make_ConvLSTM((4, 256, 256, 11), 16, (3, 3), 12)\n",
+    "from model import make_unet_conv_LSTM_v2\n",
+    "conv_LSTM = make_unet_conv_LSTM_v2((4, 256, 256, 11), 64, (3, 3), 12)\n",
     "\n",
     "conv_LSTM.compile(loss=RMSE, metrics=[RMSE], optimizer='adam')\n",
     "\n",
     "# Training Loop\n",
-    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=8, epochs=1, callbacks=[model_checkpoint])"
+    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=1, validation_batch_size=1, epochs=1, callbacks=[model_checkpoint])"
    ]
   }
  ],
