--- a/Model/spine_segm.ipynb
+++ b/Model/spine_segm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spine Segmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -14,19 +21,13 @@
     "\n",
     "from random import randint\n",
     "from PIL import Image\n",
-    "from itertools import product\n",
     "import os\n",
     "import pydicom\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras.utils import Sequence\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
-    "from tensorflow.keras.metrics import BinaryAccuracy\n",
-    "from tensorflow.keras.losses import Loss\n",
-    "from tensorflow.keras.regularizers import l2\n",
-    "from keras.layers import Concatenate, Conv2D, Conv2DTranspose, MaxPool2D, Input, Activation, BatchNormalization, Dropout, concatenate\n",
-    "from keras.models import Model"
+    "from keras.utils import Sequence\n",
+    "from keras.callbacks import ModelCheckpoint"
    ]
   },
   {
@@ -36,13 +37,22 @@
    "outputs": [],
    "source": [
     "# Init global variables\n",
-    "X_TRAIN_DIR = os.path.abspath('x_train')\n",
-    "Y_TRAIN_DIR = os.path.abspath('y_train')\n",
+    "DATA_DIR = os.path.abspath('../Data')\n",
+    "X_FILES = []\n",
+    "Y_FILES = []\n",
     "\n",
-    "X_VAL_DIR = os.path.abspath('x_val')\n",
-    "Y_VAL_DIR = os.path.abspath('y_val')\n",
+    "RESULTS = os.path.abspath('../Results')\n",
     "\n",
-    "SAVED_WEIGHTS = os.path.abspath('saved_weights')"
+    "IMG_SHAPE = ()\n",
+    "VALIDATION_NUM = 6\n",
+    "BATCH_SIZE = 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataSet"
    ]
   },
   {
@@ -51,35 +61,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Building data generators\n",
     "class Data_train_generator(Sequence):\n",
-    "    def __init__(self, data_dir, y_true_dir, batch_size, new_img_size: tuple[int, int]) -> None:\n",
-    "        self.data = os.listdir(data_dir)\n",
-    "        self.labels = os.listdir(y_true_dir)\n",
+    "    def __init__(self, x_files_list: list, y_files_list: list, batch_size, shuffle = True) -> None:\n",
+    "        self.data = x_files_list\n",
+    "        self.labels = y_files_list\n",
     "        self.batch_size = batch_size\n",
     "\n",
-    "        self.data_dir = data_dir\n",
-    "        self.y_true_dir = y_true_dir\n",
-    "\n",
-    "        self.new_img_size = new_img_size\n",
+    "        self.shuffle = shuffle\n",
     "\n",
     "    def __len__(self):\n",
     "        return int(np.ceil(len(self.data) / float(self.batch_size)))\n",
     "\n",
     "    def __open_png_y(self, file_path):\n",
-    "        img = Image.open(os.path.join(self.y_true_dir, file_path))\n",
+    "        img = Image.open(file_path)\n",
     "        data = np.array(img, dtype=\"float32\")\n",
-    "        data = cv2.resize(data[:4608, :1920], dsize=self.new_img_size[::-1], interpolation=cv2.INTER_AREA)\n",
     "        img.close()\n",
-    "        return data.reshape((*self.new_img_size, 1))\n",
+    "        return np.expand_dims(data, axis=-1)\n",
     "\n",
     "    def __open_dcm_x(self, file_path):\n",
-    "        dcm = pydicom.dcmread(os.path.join(self.data_dir, file_path))\n",
+    "        dcm = pydicom.dcmread(file_path)\n",
     "\n",
     "        d = dcm.pixel_array.astype(\"float32\") / 255\n",
-    "        d = cv2.resize(d[:4608, :1920], dsize=self.new_img_size[::-1], interpolation=cv2.INTER_AREA)\n",
     "\n",
-    "        return d.reshape((*self.new_img_size, 1))\n",
+    "        return np.expand_dims(d, axis=-1)\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        batch_x = np.array(list(map(self.__open_dcm_x, self.data[index * self.batch_size: (index + 1) * self.batch_size])))\n",
@@ -88,143 +92,18 @@
     "        return batch_x, batch_y\n",
     "\n",
     "    def on_epoch_end(self):\n",
-    "        for i in range(len(self.data)):\n",
-    "            ind_from, ind_to = randint(0, len(self.data) - 1), randint(0, len(self.data) - 1)\n",
-    "            self.data[ind_from], self.data[ind_to] = self.data[ind_to], self.data[ind_from]\n",
-    "            self.labels[ind_from], self.labels[ind_to] = self.labels[ind_to], self.labels[ind_from]\n",
-    "\n",
-    "class Test_train_generator(Sequence):\n",
-    "    def __init__(self, data_file, y_file, data_dir, y_true_dir, batch_size, new_img_size: tuple[int, int]) -> None:\n",
-    "        self.data = [data_file for i in range(500)]\n",
-    "        self.labels = [y_file for i in range(500)]\n",
-    "        self.batch_size = batch_size\n",
-    "\n",
-    "        self.data_dir = data_dir\n",
-    "        self.y_true_dir = y_true_dir\n",
-    "\n",
-    "        self.new_img_size = new_img_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return int(np.ceil(len(self.data) / float(self.batch_size)))\n",
-    "\n",
-    "    def __open_png_y(self, file_path):\n",
-    "        img = Image.open(os.path.join(self.y_true_dir, file_path))\n",
-    "        data = np.array(img, dtype=\"float32\")\n",
-    "        data = cv2.resize(data[:4608, :1920], dsize=self.new_img_size[::-1], interpolation=cv2.INTER_AREA)\n",
-    "        img.close()\n",
-    "        return data.reshape((*self.new_img_size, 1))\n",
-    "\n",
-    "    def __open_dcm_x(self, file_path):\n",
-    "        dcm = pydicom.dcmread(os.path.join(self.data_dir, file_path))\n",
-    "\n",
-    "        d = dcm.pixel_array.astype(\"float32\") / 255\n",
-    "        d = cv2.resize(d[:4608, :1920], dsize=self.new_img_size[::-1], interpolation=cv2.INTER_AREA)\n",
-    "\n",
-    "        return d.reshape((*self.new_img_size, 1))\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        batch_x = np.array(list(map(self.__open_dcm_x, self.data[index * self.batch_size: (index + 1) * self.batch_size])))\n",
-    "        batch_y = np.array(list(map(self.__open_png_y, self.labels[index * self.batch_size: (index + 1) * self.batch_size])))\n",
-    "\n",
-    "        return batch_x, batch_y\n",
-    "\n",
-    "    def on_epoch_end(self):\n",
-    "        for i in range(len(self.data)):\n",
-    "            ind_from, ind_to = randint(0, len(self.data) - 1), randint(0, len(self.data) - 1)\n",
-    "            self.data[ind_from], self.data[ind_to] = self.data[ind_to], self.data[ind_from]\n",
-    "            self.labels[ind_from], self.labels[ind_to] = self.labels[ind_to], self.labels[ind_from]"
+    "        if self.shuffle:\n",
+    "            for i in range(len(self.data)):\n",
+    "                ind_from, ind_to = randint(0, len(self.data) - 1), randint(0, len(self.data) - 1)\n",
+    "                self.data[ind_from], self.data[ind_to] = self.data[ind_to], self.data[ind_from]\n",
+    "                self.labels[ind_from], self.labels[ind_to] = self.labels[ind_to], self.labels[ind_from]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dropout_rate = 0.1\n",
-    "def standard_unit(input_tensor, stage, nb_filter, kernel_size=3):\n",
-    "\n",
-    "    act = 'elu'\n",
-    "\n",
-    "    x = Conv2D(nb_filter, (kernel_size, kernel_size), activation=act, name='conv'+stage+'_1', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(input_tensor)\n",
-    "    x = Dropout(dropout_rate, name='dp'+stage+'_1')(x)\n",
-    "    x = Conv2D(nb_filter, (kernel_size, kernel_size), activation=act, name='conv'+stage+'_2', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(x)\n",
-    "    x = Dropout(dropout_rate, name='dp'+stage+'_2')(x)\n",
-    "\n",
-    "    return x\n",
-    "\n",
-    "def Nest_Net(img_rows, img_cols, color_type=1, num_class=1, deep_supervision=False):\n",
-    "\n",
-    "    nb_filter = [32,64,128,256,512]\n",
-    "    act = 'elu'\n",
-    "\n",
-    "    bn_axis = 3\n",
-    "    img_input = Input(shape=(img_rows, img_cols, color_type), name='main_input')\n",
-    "\n",
-    "    conv1_1 = standard_unit(img_input, stage='11', nb_filter=nb_filter[0])\n",
-    "    pool1 = MaxPool2D((2, 2), strides=(2, 2), name='pool1')(conv1_1)\n",
-    "\n",
-    "    conv2_1 = standard_unit(pool1, stage='21', nb_filter=nb_filter[1])\n",
-    "    pool2 = MaxPool2D((2, 2), strides=(2, 2), name='pool2')(conv2_1)\n",
-    "\n",
-    "    up1_2 = Conv2DTranspose(nb_filter[0], (2, 2), strides=(2, 2), name='up12', padding='same')(conv2_1)\n",
-    "    conv1_2 = concatenate([up1_2, conv1_1], name='merge12', axis=bn_axis)\n",
-    "    conv1_2 = standard_unit(conv1_2, stage='12', nb_filter=nb_filter[0])\n",
-    "\n",
-    "    conv3_1 = standard_unit(pool2, stage='31', nb_filter=nb_filter[2])\n",
-    "    pool3 = MaxPool2D((2, 2), strides=(2, 2), name='pool3')(conv3_1)\n",
-    "\n",
-    "    up2_2 = Conv2DTranspose(nb_filter[1], (2, 2), strides=(2, 2), name='up22', padding='same')(conv3_1)\n",
-    "    conv2_2 = concatenate([up2_2, conv2_1], name='merge22', axis=bn_axis)\n",
-    "    conv2_2 = standard_unit(conv2_2, stage='22', nb_filter=nb_filter[1])\n",
-    "\n",
-    "    up1_3 = Conv2DTranspose(nb_filter[0], (2, 2), strides=(2, 2), name='up13', padding='same')(conv2_2)\n",
-    "    conv1_3 = concatenate([up1_3, conv1_1, conv1_2], name='merge13', axis=bn_axis)\n",
-    "    conv1_3 = standard_unit(conv1_3, stage='13', nb_filter=nb_filter[0])\n",
-    "\n",
-    "    conv4_1 = standard_unit(pool3, stage='41', nb_filter=nb_filter[3])\n",
-    "    pool4 = MaxPool2D((2, 2), strides=(2, 2), name='pool4')(conv4_1)\n",
-    "\n",
-    "    up3_2 = Conv2DTranspose(nb_filter[2], (2, 2), strides=(2, 2), name='up32', padding='same')(conv4_1)\n",
-    "    conv3_2 = concatenate([up3_2, conv3_1], name='merge32', axis=bn_axis)\n",
-    "    conv3_2 = standard_unit(conv3_2, stage='32', nb_filter=nb_filter[2])\n",
-    "\n",
-    "    up2_3 = Conv2DTranspose(nb_filter[1], (2, 2), strides=(2, 2), name='up23', padding='same')(conv3_2)\n",
-    "    conv2_3 = concatenate([up2_3, conv2_1, conv2_2], name='merge23', axis=bn_axis)\n",
-    "    conv2_3 = standard_unit(conv2_3, stage='23', nb_filter=nb_filter[1])\n",
-    "\n",
-    "    up1_4 = Conv2DTranspose(nb_filter[0], (2, 2), strides=(2, 2), name='up14', padding='same')(conv2_3)\n",
-    "    conv1_4 = concatenate([up1_4, conv1_1, conv1_2, conv1_3], name='merge14', axis=bn_axis)\n",
-    "    conv1_4 = standard_unit(conv1_4, stage='14', nb_filter=nb_filter[0])\n",
-    "\n",
-    "    conv5_1 = standard_unit(pool4, stage='51', nb_filter=nb_filter[4])\n",
-    "\n",
-    "    up4_2 = Conv2DTranspose(nb_filter[3], (2, 2), strides=(2, 2), name='up42', padding='same')(conv5_1)\n",
-    "    conv4_2 = concatenate([up4_2, conv4_1], name='merge42', axis=bn_axis)\n",
-    "    conv4_2 = standard_unit(conv4_2, stage='42', nb_filter=nb_filter[3])\n",
-    "\n",
-    "    up3_3 = Conv2DTranspose(nb_filter[2], (2, 2), strides=(2, 2), name='up33', padding='same')(conv4_2)\n",
-    "    conv3_3 = concatenate([up3_3, conv3_1, conv3_2], name='merge33', axis=bn_axis)\n",
-    "    conv3_3 = standard_unit(conv3_3, stage='33', nb_filter=nb_filter[2])\n",
-    "    up2_4 = Conv2DTranspose(nb_filter[1], (2, 2), strides=(2, 2), name='up24', padding='same')(conv3_3)\n",
-    "    conv2_4 = concatenate([up2_4, conv2_1, conv2_2, conv2_3], name='merge24', axis=bn_axis)\n",
-    "    conv2_4 = standard_unit(conv2_4, stage='24', nb_filter=nb_filter[1])\n",
-    "\n",
-    "    up1_5 = Conv2DTranspose(nb_filter[0], (2, 2), strides=(2, 2), name='up15', padding='same')(conv2_4)\n",
-    "    conv1_5 = concatenate([up1_5, conv1_1, conv1_2, conv1_3, conv1_4], name='merge15', axis=bn_axis)\n",
-    "    conv1_5 = standard_unit(conv1_5, stage='15', nb_filter=nb_filter[0])\n",
-    "\n",
-    "    nestnet_output_1 = Conv2D(num_class, (1, 1), activation='sigmoid', name='output_1', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(conv1_2)\n",
-    "    nestnet_output_2 = Conv2D(num_class, (1, 1), activation='sigmoid', name='output_2', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(conv1_3)\n",
-    "    nestnet_output_3 = Conv2D(num_class, (1, 1), activation='sigmoid', name='output_3', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(conv1_4)\n",
-    "    nestnet_output_4 = Conv2D(num_class, (1, 1), activation='sigmoid', name='output_4', kernel_initializer = 'he_normal', padding='same', kernel_regularizer=l2(1e-4))(conv1_5)\n",
-    "\n",
-    "    if deep_supervision:\n",
-    "        model = Model(img_input, [nestnet_output_1,nestnet_output_2,nestnet_output_3,nestnet_output_4])\n",
-    "    else:\n",
-    "        model = Model(img_input, [nestnet_output_4])\n",
-    "    \n",
-    "    return model"
+    "## Training"
    ]
   },
   {
@@ -236,24 +115,26 @@
     "# training\n",
     "def make_dice_loss(smooth=1e-6, gama=2):\n",
     "    def dice_loss(y_true, y_pred):\n",
-    "        y_true, y_pred = tf.cast(y_true, dtype=tf.float32), tf.cast(y_pred, tf.float32)\n",
+    "        y_true, y_pred = tf.cast(y_true, dtype=tf.float32), tf.cast(y_pred, dtype=tf.float32)\n",
     "        nominator = 2 * tf.reduce_sum(tf.multiply(y_pred, y_true)) + smooth\n",
     "        denominator = tf.reduce_sum(y_pred ** gama) + tf.reduce_sum(y_true ** gama) + smooth\n",
     "        return 1 - tf.divide(nominator, denominator)\n",
     "    return dice_loss\n",
     "\n",
-    "data_gen = Data_train_generator(X_TRAIN_DIR, Y_TRAIN_DIR, 16, (576, 240))\n",
-    "val_gen = Data_train_generator(X_VAL_DIR, Y_VAL_DIR, 16, (576, 240))\n",
+    "data_gen = Data_train_generator(X_FILES[:-VALIDATION_NUM], Y_FILES[:-VALIDATION_NUM], BATCH_SIZE)\n",
+    "val_gen = Data_train_generator(X_FILES[-VALIDATION_NUM:], Y_FILES[-VALIDATION_NUM:], BATCH_SIZE)\n",
     "\n",
     "model_checkpoint = ModelCheckpoint(\n",
     "    save_best_only=True,\n",
     "    save_weights_only=True,\n",
     "    monitor='val_loss',\n",
     "    mode='min',\n",
-    "    filepath='./saved_weights/{val_loss:.3f}-weights_unetpp.hdf5'\n",
+    "    filepath=os.path.join(RESULTS, 'saved_weights/{epoch}-weights_unetpp.hdf5')\n",
     ")\n",
     "\n",
-    "model_unet = Nest_Net(576, 240, color_type=1, num_class=1, deep_supervision=True)\n",
+    "from model import Nest_Net\n",
+    "\n",
+    "model_unet = Nest_Net(IMG_SHAPE[0], IMG_SHAPE[1], color_type=1, num_class=1, deep_supervision=True)\n",
     "\n",
     "model_unet.compile(optimizer='Adam', loss={\n",
     "    'output_1': make_dice_loss(),\n",
@@ -266,18 +147,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# testing\n",
-    "test_img, test_true_img = Test_train_generator('046_SD.dcm', '046_SD.png', X_VAL_DIR, Y_VAL_DIR, 16, (576, 240)).__getitem__(0)\n",
-    "test_img, test_true_img = test_img[3].reshape((1, 576, 240, 1)), test_true_img[0]\n",
+    "TEST_IMG_PATH = \"\"\n",
+    "TEST_TRUE_IMG_PATH = \"\"\n",
+    "\n",
+    "img = Image.open(TEST_IMG_PATH)\n",
+    "data = np.array(img, dtype=\"float32\")\n",
+    "img.close()\n",
+    "test_img = np.expand_dims(data, axis=-1)\n",
+    "\n",
+    "dcm = pydicom.dcmread(TEST_TRUE_IMG_PATH)\n",
+    "d = dcm.pixel_array.astype(\"float32\") / 255\n",
+    "test_true_img = np.expand_dims(d, axis=-1)\n",
     "\n",
     "res = model_unet.predict(test_img, batch_size=1)\n",
     "res = (res[0] + res[1] + res[2] + res[3]) / 4\n",
-    "res = res.reshape((576, 240))\n",
+    "res = res.reshape(IMG_SHAPE)\n",
     "\n",
     "fig, ax = plt.subplots(nrows=1, ncols=4)\n",
     "fig.set_figwidth(12)\n",
@@ -286,8 +183,8 @@
     "\n",
     "sns.heatmap(res, ax=ax[0])\n",
     "sns.heatmap(np.where(res > 0.5, 1, 0), ax=ax[1])\n",
-    "sns.heatmap(test_img.reshape((576, 240)), ax=ax[2])\n",
-    "sns.heatmap(test_true_img.reshape((576, 240)), ax=ax[3])\n",
+    "sns.heatmap(test_img.reshape(IMG_SHAPE), ax=ax[2])\n",
+    "sns.heatmap(test_true_img.reshape(IMG_SHAPE), ax=ax[3])\n",
     "plt.show()"
    ]
   },
@@ -319,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11-final"
+   "version": "3.10.1"
   },
   "orig_nbformat": 2
  },
