Model/DataSet refractoring

--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -83,7 +83,12 @@
     "        radial_velocity[radial_velocity == -1e6] = 0\n",
     "        radial_velocity[radial_velocity == -2e6] = 0\n",
     "\n",
-    "        d = np.append(intensity / 30, (radial_velocity + 34) / 70, axis=-1)\n",
+    "        intensity = intensity / 30\n",
+    "        intensity[intensity < 0] = -1\n",
+    "        \n",
+    "        radial_velocity = (radial_velocity + 35) / 35 - 1\n",
+    "\n",
+    "        d = np.append(intensity, radial_velocity, axis=-1)\n",
     "        inputs = d[:, :self.in_seq_len]\n",
     "\n",
     "        if self.with_time:\n",
@@ -159,7 +164,7 @@
     "\n",
     "# Model\n",
     "from model import make_unet_conv_LSTM_v2\n",
-    "conv_LSTM = make_unet_conv_LSTM_v2((4, 256, 256, 11), 64, (3, 3), 12)\n",
+    "conv_LSTM = make_unet_conv_LSTM_v2((4, 256, 256, 11), 32, (3, 3), 12)\n",
     "\n",
     "conv_LSTM.compile(loss=RMSE, metrics=[RMSE], optimizer='adam')\n",
     "\n",
