able to process 4608x1920

--- a/Model/spine_segm.ipynb
+++ b/Model/spine_segm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import cv2\n",
     "\n",
     "from random import randint\n",
     "from PIL import Image\n",
@@ -32,20 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Init global variables\n",
-    "DATA_DIR = os.path.abspath('../Data')\n",
-    "X_FILES = []\n",
-    "Y_FILES = []\n",
+    "DATA_DIR = os.path.abspath('../Data/spine-segmentation')\n",
+    "X_FILES = [os.path.abspath(os.path.join(DATA_DIR, f'dicom/{i}')) for i in os.listdir(os.path.join(DATA_DIR, 'dicom'))]\n",
+    "Y_FILES = [os.path.abspath(os.path.join(DATA_DIR, f'filled/{i}')) for i in os.listdir(os.path.join(DATA_DIR, 'filled'))]\n",
     "\n",
     "RESULTS = os.path.abspath('../Results')\n",
     "\n",
-    "IMG_SHAPE = ()\n",
+    "IMG_SHAPE = (4608, 1920)\n",
     "VALIDATION_NUM = 6\n",
-    "BATCH_SIZE = 16"
+    "BATCH_SIZE = 1"
    ]
   },
   {
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +74,7 @@
     "    def __open_png_y(self, file_path):\n",
     "        img = Image.open(file_path)\n",
     "        data = np.array(img, dtype=\"float32\")\n",
+    "        print()\n",
     "        img.close()\n",
     "        return np.expand_dims(data, axis=-1)\n",
     "\n",
@@ -103,14 +103,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training And Validating"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1/20\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# training\n",
     "def make_dice_loss(smooth=1e-6, gama=2):\n",
@@ -160,8 +179,10 @@
    "outputs": [],
    "source": [
     "# testing\n",
-    "TEST_IMG_PATH = \"\"\n",
-    "TEST_TRUE_IMG_PATH = \"\"\n",
+    "WEIGHTS2LOAD = os.path.join(RESULTS, 'saved_weights/1-weights_unetpp.hdf5')\n",
+    "\n",
+    "TEST_IMG_PATH = os.path.join(DATA_DIR, 'dicom/050_SD.dcm')\n",
+    "TEST_TRUE_IMG_PATH = os.path.join(DATA_DIR, 'filled/050_SD.png')\n",
     "\n",
     "img = Image.open(TEST_IMG_PATH)\n",
     "data = np.array(img, dtype=\"float32\")\n",
@@ -175,6 +196,8 @@
     "res = model_unet.predict(test_img, batch_size=1)\n",
     "res = (res[0] + res[1] + res[2] + res[3]) / 4\n",
     "res = res.reshape(IMG_SHAPE)\n",
+    "\n",
+    "# Drawing Result\n",
     "\n",
     "fig, ax = plt.subplots(nrows=1, ncols=4)\n",
     "fig.set_figwidth(12)\n",
