--- a/Model/spine_segm.ipynb
+++ b/Model/spine_segm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import cv2\n",
     "\n",
     "from random import randint\n",
     "from PIL import Image\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
     "\n",
     "RESULTS = os.path.abspath('../Results')\n",
     "\n",
-    "IMG_SHAPE = (4608, 1920)\n",
+    "IMG_SHAPE = (576, 240)\n",
     "VALIDATION_NUM = 6\n",
     "BATCH_SIZE = 1"
    ]
@@ -56,17 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Data_train_generator(Sequence):\n",
-    "    def __init__(self, x_files_list: list, y_files_list: list, batch_size, shuffle = True) -> None:\n",
+    "    def __init__(self, x_files_list: list, y_files_list: list, batch_size: int, new_image_size = None, shuffle = True) -> None:\n",
     "        self.data = x_files_list\n",
     "        self.labels = y_files_list\n",
     "        self.batch_size = batch_size\n",
     "\n",
     "        self.shuffle = shuffle\n",
+    "        self.new_image_size = new_image_size\n",
     "\n",
     "    def __len__(self):\n",
     "        return int(np.ceil(len(self.data) / float(self.batch_size)))\n",
@@ -74,16 +76,22 @@
     "    def __open_png_y(self, file_path):\n",
     "        img = Image.open(file_path)\n",
     "        data = np.array(img, dtype=\"float32\")\n",
-    "        print()\n",
+    "        \n",
+    "        if self.new_image_size != None:\n",
+    "            data = cv2.resize(data[:4608, :1920], dsize=self.new_image_size[::-1], interpolation=cv2.INTER_AREA)\n",
+    "\n",
     "        img.close()\n",
-    "        return np.expand_dims(data, axis=-1)\n",
+    "        return np.reshape(data, (*self.new_image_size, 1))\n",
     "\n",
     "    def __open_dcm_x(self, file_path):\n",
     "        dcm = pydicom.dcmread(file_path)\n",
     "\n",
-    "        d = dcm.pixel_array.astype(\"float32\") / 255\n",
+    "        data = dcm.pixel_array.astype(\"float32\") / 255\n",
     "\n",
-    "        return np.expand_dims(d, axis=-1)\n",
+    "        if self.new_image_size != None:\n",
+    "            data = cv2.resize(data[:4608, :1920], dsize=self.new_image_size[::-1], interpolation=cv2.INTER_AREA)\n",
+    "\n",
+    "        return np.reshape(data, (*self.new_image_size, 1))\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        batch_x = np.array(list(map(self.__open_dcm_x, self.data[index * self.batch_size: (index + 1) * self.batch_size])))\n",
@@ -108,28 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 1/20\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training\n",
     "def make_dice_loss(smooth=1e-6, gama=2):\n",
@@ -140,8 +129,8 @@
     "        return 1 - tf.divide(nominator, denominator)\n",
     "    return dice_loss\n",
     "\n",
-    "data_gen = Data_train_generator(X_FILES[:-VALIDATION_NUM], Y_FILES[:-VALIDATION_NUM], BATCH_SIZE)\n",
-    "val_gen = Data_train_generator(X_FILES[-VALIDATION_NUM:], Y_FILES[-VALIDATION_NUM:], BATCH_SIZE)\n",
+    "data_gen = Data_train_generator(X_FILES[:-VALIDATION_NUM], Y_FILES[:-VALIDATION_NUM], BATCH_SIZE, IMG_SHAPE)\n",
+    "val_gen = Data_train_generator(X_FILES[-VALIDATION_NUM:], Y_FILES[-VALIDATION_NUM:], BATCH_SIZE, IMG_SHAPE)\n",
     "\n",
     "model_checkpoint = ModelCheckpoint(\n",
     "    save_best_only=True,\n",
@@ -151,16 +140,17 @@
     "    filepath=os.path.join(RESULTS, 'saved_weights/{epoch}-weights_unetpp.hdf5')\n",
     ")\n",
     "\n",
-    "from model import Nest_Net\n",
+    "from model import make_UNet3p\n",
     "\n",
-    "model_unet = Nest_Net(IMG_SHAPE[0], IMG_SHAPE[1], color_type=1, num_class=1, deep_supervision=True)\n",
+    "model_unet = make_UNet3p((*IMG_SHAPE, 1), [64, 128, 256, 512, 1024, 320, 320, 320, 320], deep_supervision=True)\n",
     "\n",
     "model_unet.compile(optimizer='Adam', loss={\n",
     "    'output_1': make_dice_loss(),\n",
     "    'output_2': make_dice_loss(),\n",
     "    'output_3': make_dice_loss(),\n",
-    "    'output_4': make_dice_loss()\n",
-    "}, loss_weights=[1.0, 1.0, 1.0, 1.0])\n",
+    "    'output_4': make_dice_loss(),\n",
+    "    'output_5': make_dice_loss()\n",
+    "}, loss_weights=[1.0, 1.0, 1.0, 1.0, 1.0])\n",
     "\n",
     "history_unet = model_unet.fit(x=data_gen, epochs=20, validation_data=val_gen, callbacks=[model_checkpoint])"
    ]
@@ -184,16 +174,9 @@
     "TEST_IMG_PATH = os.path.join(DATA_DIR, 'dicom/050_SD.dcm')\n",
     "TEST_TRUE_IMG_PATH = os.path.join(DATA_DIR, 'filled/050_SD.png')\n",
     "\n",
-    "img = Image.open(TEST_IMG_PATH)\n",
-    "data = np.array(img, dtype=\"float32\")\n",
-    "img.close()\n",
-    "test_img = np.expand_dims(data, axis=-1)\n",
+    "test_gen = Data_train_generator([TEST_IMG_PATH], [TEST_TRUE_IMG_PATH], batch_size=1, new_image_size=IMG_SHAPE)\n",
     "\n",
-    "dcm = pydicom.dcmread(TEST_TRUE_IMG_PATH)\n",
-    "d = dcm.pixel_array.astype(\"float32\") / 255\n",
-    "test_true_img = np.expand_dims(d, axis=-1)\n",
-    "\n",
-    "res = model_unet.predict(test_img, batch_size=1)\n",
+    "res = model_unet.predict(test_gen.__getitem__(0)[0], batch_size=1)\n",
     "res = (res[0] + res[1] + res[2] + res[3]) / 4\n",
     "res = res.reshape(IMG_SHAPE)\n",
     "\n",
@@ -206,17 +189,10 @@
     "\n",
     "sns.heatmap(res, ax=ax[0])\n",
     "sns.heatmap(np.where(res > 0.5, 1, 0), ax=ax[1])\n",
-    "sns.heatmap(test_img.reshape(IMG_SHAPE), ax=ax[2])\n",
-    "sns.heatmap(test_true_img.reshape(IMG_SHAPE), ax=ax[3])\n",
+    "sns.heatmap(test_gen.__getitem__(0)[0].reshape(IMG_SHAPE), ax=ax[2])\n",
+    "sns.heatmap(test_gen.__getitem__(0)[1].reshape(IMG_SHAPE), ax=ax[3])\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
