--- a/Model/spine_segm.ipynb
+++ b/Model/spine_segm.ipynb
@@ -27,7 +27,8 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras.utils import Sequence\n",
-    "from keras.callbacks import ModelCheckpoint"
+    "from keras.callbacks import ModelCheckpoint\n",
+    "#kdfjksdjfdk"
    ]
   },
   {
