unet_LSTMConv model

--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -31,9 +31,10 @@
    "outputs": [],
    "source": [
     "# Global Variables\n",
-    "DATA_DIR = os.path.abspath('../Data')\n",
+    "DATA_DIR = os.path.abspath('../Data/nowcasting')\n",
     "TRAIN_DIR = os.path.join(DATA_DIR, 'train')\n",
     "RESULT_DIR = os.path.abspath('../Results')\n",
+    "\n",
     "TRAIN_FILES_LIST = [os.path.join(TRAIN_DIR, i) for i in os.listdir(TRAIN_DIR)]\n",
     "TEST_FILE = os.path.join(DATA_DIR, '2022-test-public.hdf5')"
    ]
@@ -150,8 +151,8 @@
     "RMSE = make_RMSE_metric()\n",
     "\n",
     "# Data Generator\n",
-    "train_gen = RadarDataset([TRAIN_FILES_LIST[0]], in_seq_len=4, out_seq_len=12, batch_size=1)\n",
-    "val_gen = RadarDataset([TEST_FILE], in_seq_len=4, out_seq_len=12, batch_size=1)\n",
+    "train_gen = RadarDataset(TRAIN_FILES_LIST, in_seq_len=4, out_seq_len=12, batch_size=1, mode=\"sequentially\")\n",
+    "val_gen = RadarDataset([TEST_FILE], in_seq_len=4, out_seq_len=12, batch_size=1, mode=\"sequentially\")\n",
     "\n",
     "# Model Callbacks\n",
     "model_checkpoint = ModelCheckpoint(\n",
@@ -163,13 +164,13 @@
     ")\n",
     "\n",
     "# Model\n",
-    "from model import make_unet_conv_LSTM_v2\n",
-    "conv_LSTM = make_unet_conv_LSTM_v2((4, 256, 256, 11), 32, (3, 3), 12)\n",
+    "from model import make_unet_conv_LSTM\n",
+    "conv_LSTM = make_unet_conv_LSTM((4, 256, 256, 11), [64, 128, 256], (3, 3), 12, 4)\n",
     "\n",
     "conv_LSTM.compile(loss=RMSE, metrics=[RMSE], optimizer='adam')\n",
     "\n",
     "# Training Loop\n",
-    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=1, validation_batch_size=1, epochs=1, callbacks=[model_checkpoint])"
+    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=1, epochs=1, callbacks=[model_checkpoint])"
    ]
   }
  ],
@@ -189,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
