--- a/Model/main.ipynb
+++ b/Model/main.ipynb
@@ -32,11 +32,12 @@
    "source": [
     "# Global Variables\n",
     "DATA_DIR = os.path.abspath('../Data/nowcasting')\n",
-    "TRAIN_DIR = os.path.join(DATA_DIR, 'train')\n",
     "RESULT_DIR = os.path.abspath('../Results')\n",
     "\n",
-    "TRAIN_FILES_LIST = [os.path.join(TRAIN_DIR, i) for i in os.listdir(TRAIN_DIR)]\n",
-    "TEST_FILE = os.path.join(DATA_DIR, '2022-test-public.hdf5')"
+    "TRAIN_FILES_LIST = [os.path.join(DATA_DIR, f'train/{i}') for i in os.listdir(os.path.join(DATA_DIR, 'train'))]\n",
+    "TEST_FILE = os.path.join(DATA_DIR, '2022-test-public.hdf5')\n",
+    "\n",
+    "BATCH_SIZE = 2"
    ]
   },
   {
@@ -123,7 +124,8 @@
     "        self.sequences = list(filter(\n",
     "            lambda x: int(x[-1]) - int(x[0]) == (self.seq_len - 1) * 600,\n",
     "            self.sequences\n",
-    "        ))"
+    "        ))\n",
+    "        "
    ]
   },
   {
@@ -151,14 +153,14 @@
     "RMSE = make_RMSE_metric()\n",
     "\n",
     "# Data Generator\n",
-    "train_gen = RadarDataset(TRAIN_FILES_LIST, in_seq_len=4, out_seq_len=12, batch_size=1, mode=\"sequentially\")\n",
-    "val_gen = RadarDataset([TEST_FILE], in_seq_len=4, out_seq_len=12, batch_size=1, mode=\"sequentially\")\n",
+    "train_gen = RadarDataset(TRAIN_FILES_LIST[:-1], in_seq_len=4, out_seq_len=12, batch_size=BATCH_SIZE, mode=\"sequentially\")\n",
+    "val_gen = RadarDataset([TRAIN_FILES_LIST[-1]], in_seq_len=4, out_seq_len=12, batch_size=BATCH_SIZE, mode=\"sequentially\")\n",
     "\n",
     "# Model Callbacks\n",
     "model_checkpoint = ModelCheckpoint(\n",
     "    save_best_only=True,\n",
     "    save_weights_only=True,\n",
-    "    monitor='RMSE_metric',\n",
+    "    monitor='val_loss',\n",
     "    mode='min',\n",
     "    filepath=os.path.join(RESULT_DIR, 'saved_weights/{epoch}-weights.hdf5')\n",
     ")\n",
@@ -167,10 +169,10 @@
     "from model import make_unet_conv_LSTM\n",
     "conv_LSTM = make_unet_conv_LSTM((4, 256, 256, 11), [64, 128, 256], (3, 3), 12, 4)\n",
     "\n",
-    "conv_LSTM.compile(loss=RMSE, metrics=[RMSE], optimizer='adam')\n",
+    "conv_LSTM.compile(loss=RMSE, optimizer='adam')\n",
     "\n",
     "# Training Loop\n",
-    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=1, epochs=1, callbacks=[model_checkpoint])"
+    "conv_LSTM.fit(train_gen, validation_data=val_gen, batch_size=BATCH_SIZE, epochs=10, callbacks=[model_checkpoint])"
    ]
   }
  ],
